--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -14,13 +14,12 @@
         android:background="@color/main"
         android:paddingBottom="@dimen/appbar_padding_bottom"
         app:elevation="0dp">
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:paddingHorizontal="@dimen/toolbar_padding_horizontal"
-            android:paddingVertical="@dimen/toolbar_title_padding_vertical"
-            android:paddingBottom="@dimen/toolbar_padding_bottom">
+            android:paddingVertical="@dimen/toolbar_title_padding_vertical">
 
             <ImageButton
                 android:id="@+id/button_back"
