--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,17 +2,15 @@
 <resources>
 
     <!--               Toolbar   [Note List]               -->
-    <dimen name="toolbar_padding_bottom">37dp</dimen>
     <dimen name="toolbar_padding_horizontal">24dp</dimen>
     <dimen name="toolbar_title_padding_vertical">10dp</dimen>
     <dimen name="toolbar_title_text_size">43sp</dimen>
     <dimen name="toolbar_first_button_margin_end">21dp</dimen>
     <dimen name="toolbar_menu_button_padding">13dp</dimen>
 
-    <!--            Empty notes list text             -->
+    <!--            Notes list                             -->
     <dimen name="empty_notes_list_text_size">20sp</dimen>
-
-    <!--    Floating action button    -->
+    <dimen name="recycler_view_margin_horizontal">25dp</dimen>
     <dimen name="fab_margin">46dp</dimen>
 
     <!--       Edit note screen                         -->
@@ -21,4 +19,9 @@
     <dimen name="edit_text_title_size">48sp</dimen>
     <dimen name="edit_text_content_margin_top">40dp</dimen>
     <dimen name="edit_text_content_size">23sp</dimen>
+
+    <!--                Note item                            -->
+    <dimen name="note_item_title_margin_horizontal">45dp</dimen>
+    <dimen name="note_item_title_margin_vertical">22dp</dimen>
+    <dimen name="note_item_title_text_size">28sp</dimen>
 </resources>
