--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -2,10 +2,11 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="25dp"
-    app:cardCornerRadius="10sp"
+    android:layout_marginTop="@dimen/note_item_margin_top"
+    app:cardCornerRadius="@dimen/note_item_corner_radius"
     tools:cardBackgroundColor="@color/second">
 
     <TextView
