--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="toolbar_title_padding_vertical">10dp</dimen>
     <dimen name="toolbar_title_text_size">43sp</dimen>
     <dimen name="toolbar_first_button_margin_end">21dp</dimen>
+    <dimen name="toolbar_margin_top">20dp</dimen>
     <dimen name="toolbar_menu_button_padding">13dp</dimen>
 
     <!--            Notes list                             -->
