--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -12,15 +12,20 @@
         tools:layout="@layout/fragment_notes_list" >
         <action
             android:id="@+id/action_notesListFragment_to_noteAddFragment"
-            app:destination="@id/noteAddFragment" />
+            app:destination="@id/noteEditFragment" />
     </fragment>
     <fragment
-        android:id="@+id/noteAddFragment"
+        android:id="@+id/noteEditFragment"
         android:name="ru.maxmv.notes.presentation.note_edit.NoteEditFragment"
         android:label="fragment_note_add"
         tools:layout="@layout/fragment_note_edit" >
         <action
             android:id="@+id/action_noteAddFragment_to_notesListFragment"
             app:destination="@id/notesListFragment" />
+        <argument
+            android:name="noteArg"
+            app:argType="ru.maxmv.notes.data.Note"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
 </navigation>
