--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -9,23 +9,25 @@
         android:id="@+id/notesListFragment"
         android:name="ru.maxmv.notes.presentation.notes_list.NotesListFragment"
         android:label="fragment_notes_list"
-        tools:layout="@layout/fragment_notes_list" >
+        tools:layout="@layout/fragment_notes_list">
         <action
             android:id="@+id/action_notesListFragment_to_noteAddFragment"
-            app:destination="@id/noteEditFragment" />
+            app:destination="@id/noteEditFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_in_left" />
     </fragment>
     <fragment
         android:id="@+id/noteEditFragment"
         android:name="ru.maxmv.notes.presentation.note_edit.NoteEditFragment"
         android:label="fragment_note_add"
-        tools:layout="@layout/fragment_note_edit" >
+        tools:layout="@layout/fragment_note_edit">
         <action
             android:id="@+id/action_noteAddFragment_to_notesListFragment"
             app:destination="@id/notesListFragment" />
         <argument
             android:name="noteArg"
+            android:defaultValue="@null"
             app:argType="ru.maxmv.notes.data.Note"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            app:nullable="true" />
     </fragment>
 </navigation>
